<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profil_neighbour"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_list.ProfilNeighbourActivity">

    <!--toolbar-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_profil_neighbour_toolbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/activity_profil_neighbour_toolbar_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:scaleType="centerCrop"

                tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />

            <ImageButton
                android:id="@+id/activity_profil_neighbour_toolbar_returnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:background="@null"
                android:clickable="true"
                android:padding="4dp"
                android:src="@drawable/ic_arrow_back_24dp" />


            <TextView
                android:id="@+id/activity_profil_neighbour_toolbar_name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="15dp"
                android:paddingStart="10dp"
                android:text="Caroline"
                android:textColor="@android:color/white"
                android:textSize="30dp" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_profil_neighbour_favoris_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="#F5FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369"
        app:srcCompat="@drawable/ic_star_yellow_24dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/activity_profil_neighbour_info_card"
        android:layout_width="380dp"
        android:layout_height="190dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_profil_neighbour_info_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_profil_neighbour_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/info_card_name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="-3dp"
                android:layout_marginBottom="146dp"
                android:paddingStart="15dp"
                android:text="Caroline"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/info_card_address_txt"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="-3dp"
                android:layout_marginBottom="102dp"
                android:drawableLeft="@drawable/ic_address_24dp"
                android:paddingStart="15dp"
                android:paddingTop="2dp"
                android:text="    Saint Pierre du Mont à 5km"
                android:textSize="14dp"
                app:autoSizeTextType="none" />

            <TextView
                android:id="@+id/info_card_phone_txt"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="-2dp"
                android:layout_marginBottom="56dp"
                android:drawableLeft="@drawable/ic_phone_24dp"
                android:paddingStart="15dp"
                android:paddingTop="2dp"
                android:text="    +33 6 86 57 90 14"
                android:textSize="14dp"
                app:autoSizeTextType="none" />

            <TextView
                android:id="@+id/info_card_website_txt"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="-5dp"
                android:layout_marginBottom="14dp"
                android:drawableLeft="@drawable/ic_website_24dp"
                android:paddingStart="15dp"
                android:paddingTop="2dp"
                android:text="    www.facebook.fr/caroline"
                android:textSize="14dp"
                app:autoSizeTextType="none" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/activity_profil_neighbour_info_description"
        android:layout_width="380dp"
        android:layout_height="180dp"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_profil_neighbour_info_card">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/info_description_title_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="-5dp"
                android:layout_marginBottom="140dp"
                android:paddingStart="15dp"
                android:text="À propos de moi"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/info_description_text_txt"
                android:layout_width="match_parent"
                android:layout_height="107dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="16dp"
                android:paddingStart="15dp"
                android:paddingEnd="4dp"
                android:text="Bonjour ! Je souhaiterais faire de la marche nordique. Pas initiée, je recherche une ou plusieurs personnes susceptibles de m'accompagner ! J'aime les jeux de cartes tels la belote et le tarot.."
                android:textColor="@android:color/darker_gray"
                android:textSize="14dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>


